Fix overlap

--- a/style.css
+++ b/style.css
@@ -656,6 +656,11 @@
   .header {
     height: 8.27%;
     background-color: #3e3c3c;
+    min-width: 1195px;
+  }
+
+  #logo {
+    left: 10.2%;
   }
 
   .desknav-bar {
@@ -672,6 +677,7 @@
     height: 55.55%;
     align-items: center;
     gap: 3.13%;
+    min-width: 204px;
   }
 
   .desknav {
@@ -688,6 +694,7 @@
     line-height: 20px;
     list-style: none;
     text-decoration-style: none;
+    gap: 8px;
   }
 
   .desknav1 {
@@ -713,17 +720,22 @@
 
   .section {
     height: 91.725%;
+    top: 8.27%;
+    min-width: 1195px;
   }
 
   #container {
     background-image: url(./desktopimg/backgrounds/background1.png);
     background-color: #1c1a19;
+    background-position: top right;
+    min-height: 798px;
+    background-size: contain;
   }
 
   #box {
     position: absolute;
     padding-top: 0%;
-    width: 566px;
+    width: 39.305%;
     height: 739px;
     padding-left: 9.93%;
     justify-content: center;
@@ -739,6 +751,7 @@
     font-weight: 400;
     font-size: 72px;
     line-height: 82px;
+    min-width: 350px;
   }
 
   #heading2 {
@@ -789,12 +802,12 @@
 
   .works {
     min-height: 1810px;
+    min-width: 1195px;
   }
 
   .work-grid {
     width: 80.27%;
     margin-left: 9.86%;
-    margin-right: 9.86%;
     margin-bottom: 7.202%;
     height: 76.187vh;
     min-height: 1379px;
@@ -818,7 +831,7 @@
 
   .desk-yoga {
     width: 40.831%;
-    height: 77.678%;
+    height: 100%;
     margin-left: 2.076%;
   }
 
@@ -827,16 +840,18 @@
     font-size: 40px;
     line-height: 52px;
     height: 13.793%;
+    min-width: 321px;
   }
 
   .framepara {
-    height: 40.229%;
-    margin-top: 5.193%;
+    height: 35.229%;
+    margin-top: 0.193%;
     margin-left: 0;
     margin-right: 0;
     font-size: 21.2px;
     line-height: 28px;
-    padding-bottom: 5.193%;
+    padding-bottom: 7.193%;
+    min-width: 368px;
   }
 
   #tags {
@@ -861,6 +876,7 @@
   .frame {
     height: 65.725%;
     padding-top: 2.077%;
+    min-width: 900px;
   }
 
   .cards {
@@ -873,6 +889,7 @@
     justify-content: normal;
     width: 100%;
     margin: 0;
+    min-width: 900px;
   }
 
   .card {
@@ -1021,6 +1038,7 @@
     width: 100%;
     height: 100%;
     min-height: 1195px;
+    min-width: 1195px;
   }
 
   .about1 {
@@ -1126,6 +1144,7 @@
   .contact {
     width: 100%;
     height: 100vh;
+    min-width: 1195px;
   }
 
   .contact-grid {
